--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "private": true,
   "dependencies": {
     "@rails/actioncable": "^6.0.0-alpha",
+    "@rails/actiontext": "^6.0.0",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
     "tailwindcss": "^1.1.2",
+    "trix": "^1.0.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
