--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
+    "stimulus": "^1.1.1",
     "tailwindcss": "^1.1.2",
     "trix": "^1.0.0",
     "turbolinks": "^5.2.0"
